The SudokuBuilder returns now the list of SudokuSquares and the list of SudokuRegions.